# hello-patient-interview

./: README.md  docker-compose.yml
backend/: dockerfile  pyproject.toml
backend/app/: db_engine.py  main.py  main_test.py  models.py  seed.py
backend/app/services/: chat.py  thread.py  user.py
frontend/: dockerfile  package-lock.json  package.json
frontend/actions/: chat.ts
frontend/app/: page.tsx
frontend/app/components/: ChatLog.tsx  ChatUI.tsx  chatmessage.tsx  index.ts
frontend/app/models/: Chat.ts  ChatThread.ts  User.ts
frontend/components/: ChatLog.tsx  ChatMessage.tsx  ChatUI.tsx
frontend/models/: Chat.ts  ChatThread.ts  index.ts
